# bevy-editor

./: README.md  package.json
src/: App.svelte
src-tauri/: tauri.conf.json
src/components/: Tree.svelte  Viewport.svelte
viewport/: Cargo.toml
viewport/src/: main.rs
