[package]
name = "viewport"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
  "render",
  # "bevy_winit",
  # "bevy_gilrs",
  # "bevy_audio",
  # "png",
  # "hdr",
  # "vorbis",
  "x11",
] }
bevy-web-resizer = "0.1"
console_error_panic_hook = "0.1"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
